??? ??? ?? ??:??:?? UTC ????

        0.40 release.

        Changes
        
        - The vim merger has been improved and now uses diff3 to merge
          non-conflict changes automatically before executing vimdiff.

	- Values used with the --depth option used to control recursion with
          node and path restrictions have changed. Using --depth=0 now means
          exactly the specified directories and *not* their children. Using
          --depth=1 now means the specified directories and their immediate
          children. Previously --depth=0 included children and --depth=1
          included grandchildren and it was not possible to exclude children
          using --depth.  The simple fix for anyone using --depth is to add 1 to
          the values they are using.

        - Document that ssh: and file: sync transports are not supported on
          native Win32.

        Bugs fixed

        - `commit' now uses keydir specified in _MTN/options

        New features

        Internal

        - Update Botan to 1.7.4.


Mon Feb 25 15:55:36 UTC 2008

        0.39 release.

        Changes

        - 'mtn di' is now an alias for 'mtn diff'.

        - 'automate db_set' has been renamed to 'automate set_db_variable'.

        - 'automate db_get' has been replaced by 'automate get_db_variables'
          which returns all database variables similar to 'list vars' in
          basic_io format, optionally restricted by domain.

        - The REVID argument of 'automate get_revision' is now mandatory;
          to retrieve the current workspace revision, use the new command
          'automate get_current_revision'

        - messages describing conflicts from all of the various merge commands
          have been reworked and should be much more informative.

        - mtn show_conflicts now outputs much more detailed and descriptive
          messages, however it may report content conflicts that will be
          resolved automatically by the line merger.
