@@ -2775,7 +2775,8 @@ revision IDs which begin with @code{0f3a}.
 @item Parent selection
 Uses selector type @code{p}. For example, @code{p:0f3a} matches the
 revision IDs which are the parent of the revision ID which begins with
-@code{0f3a}.
+@code{0f3a}. If you give a bare @code{p:}, monotone will require you to be in
+a workspace, and query the parent of the base workspace revision.
 @item Tag selection
 Uses selector type @code{t}. For example, @code{t:monotone-0.11} matches
 @code{tag} certs where the cert value begins with @code{monotone-0.11}.
