@@ -48,7 +48,8 @@ enum selector_type
 typedef vector<pair<selector_type, string> > selector_list;
 
 static void
-decode_selector(options const & opts,
+decode_selector(project_t & project,
+                options const & opts,
                 lua_hooks & lua,
                 string const & orig_sel,
                 selector_type & type,
@@ -140,7 +141,7 @@ decode_selector(options const & opts,
             tmp += "T00:00:00";
           N(tmp.size()==19 || sel_date==type, 
             F("selector '%s' is not a valid date (%s)") % sel % tmp);
-            
+
           if (sel != tmp)
             {
               P (F ("expanded date '%s' -> '%s'\n") % sel % tmp);
@@ -170,13 +171,35 @@ decode_selector(options const & opts,
             F("the cert selector c: may not be empty"));
           break;
 
+        case sel_parent:
+          if (sel.empty())
+            {
+              workspace work(opts, lua, F("the empty parent selector p: refers to"
+                                          "the base revision of the workspace"));
+
+              parent_map parents;
+              set<revision_id> parent_ids;
+
+              work.get_parent_rosters(project.db, parents);
+
+              for (parent_map::const_iterator i = parents.begin();
+                i != parents.end(); ++i)
+                {
+                  parent_ids.insert(i->first);
+                }
+
+              diagnose_ambiguous_expansion(project, "p:", parent_ids);
+              sel = (* parent_ids.begin()).inner()();
+            }
+          break;
         default: break;
         }
     }
 }
 
 static void 
-parse_selector(options const & opts,
+parse_selector(project_t & project,
+               options const & opts,
                lua_hooks & lua,
                string const & str, selector_list & sels)
 {
@@ -204,7 +227,7 @@ parse_selector(options const & opts,
           string sel;
           selector_type type = sel_unknown;
 
-          decode_selector(opts, lua, *i, type, sel);
+          decode_selector(project, opts, lua, *i, type, sel);
           sels.push_back(make_pair(type, sel));
         }
     }
@@ -338,7 +361,7 @@ complete(options const & opts, lua_hooks & lua,
          set<revision_id> & completions)
 {
   selector_list sels;
-  parse_selector(opts, lua, str, sels);
+  parse_selector(project, opts, lua, str, sels);
 
   // avoid logging if there's no expansion to be done
   if (sels.size() == 1
@@ -393,7 +416,7 @@ expand_selector(options const & opts, lua_hooks & lua,
                 set<revision_id> & completions)
 {
   selector_list sels;
-  parse_selector(opts, lua, str, sels);
+  parse_selector(project, opts, lua, str, sels);
 
   // avoid logging if there's no expansion to be done
   if (sels.size() == 1
